MessageTH/file/baseErros2.txt

---------
File "/Soma.py", line 8
    print("%i"soma)
                 ^
SyntaxError: invalid syntax
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 63, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 30, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 23, in <module>
    from apport.packaging_impl import impl as packaging
  File "/usr/lib/python3/dist-packages/apport/packaging_impl.py", line 20, in <module>
    import apt
  File "/usr/lib/python3/dist-packages/apt/__init__.py", line 34, in <module>
    apt_pkg.init_config()
SystemError: E:Unable to read /etc/apt/apt.conf.d/ - opendir (13: Permission denied)

Original exception was:
  File "/Soma.py", line 8
    print("%i"soma)
                 ^
SyntaxError: invalid syntax

---------

File "/2.py", line 3
    while(i = 0 < n):
            ^
SyntaxError: invalid syntax
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 63, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 30, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 23, in <module>
    from apport.packaging_impl import impl as packaging
  File "/usr/lib/python3/dist-packages/apport/packaging_impl.py", line 20, in <module>
    import apt
  File "/usr/lib/python3/dist-packages/apt/__init__.py", line 34, in <module>
    apt_pkg.init_config()
SystemError: E:Unable to read /etc/apt/apt.conf.d/ - opendir (13: Permission denied)

Original exception was:
  File "/2.py", line 3
    while(i = 0 < n):
            ^
SyntaxError: invalid syntax

---------

Traceback (most recent call last):
  File "/resp.py", line 6, in <module>
    l.append(a)
NameError: name 'a' is not defined
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 63, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 30, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 23, in <module>
    from apport.packaging_impl import impl as packaging
  File "/usr/lib/python3/dist-packages/apport/packaging_impl.py", line 20, in <module>
    import apt
  File "/usr/lib/python3/dist-packages/apt/__init__.py", line 34, in <module>
    apt_pkg.init_config()
SystemError: E:Unable to read /etc/apt/apt.conf.d/ - opendir (13: Permission denied)

Original exception was:
Traceback (most recent call last):
  File "/resp.py", line 6, in <module>
    l.append(a)
NameError: name 'a' is not defined

---------
Traceback (most recent call last):
  File "/soma_array.py", line 6, in <module>
    acumula+=numero
NameError: name 'acumula' is not defined
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 63, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 30, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 23, in <module>
    from apport.packaging_impl import impl as packaging
  File "/usr/lib/python3/dist-packages/apport/packaging_impl.py", line 20, in <module>
    import apt
  File "/usr/lib/python3/dist-packages/apt/__init__.py", line 34, in <module>
    apt_pkg.init_config()
SystemError: E:Unable to read /etc/apt/apt.conf.d/ - opendir (13: Permission denied)

Original exception was:
Traceback (most recent call last):
  File "/soma_array.py", line 6, in <module>
    acumula+=numero
NameError: name 'acumula' is not defined



---------
Traceback (most recent call last):
  File "/NewSubmission.py", line 97, in <module>
    fila1.imprime()
AttributeError: 'int' object has no attribute 'imprime'
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 63, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 30, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 23, in <module>
    from apport.packaging_impl import impl as packaging
  File "/usr/lib/python3/dist-packages/apport/packaging_impl.py", line 20, in <module>
    import apt
  File "/usr/lib/python3/dist-packages/apt/__init__.py", line 34, in <module>
    apt_pkg.init_config()
SystemError: E:Unable to read /etc/apt/apt.conf.d/ - opendir (13: Permission denied)

Original exception was:
Traceback (most recent call last):
  File "/NewSubmission.py", line 97, in <module>
    fila1.imprime()
AttributeError: 'int' object has no attribute 'imprime'

---------
Traceback (most recent call last):
  File "/Calculadora.py", line 17, in <module>
    print '{0.3f}'.format(i)
AttributeError: 'float' object has no attribute '3f'

---------
File "/Calculadora.py", line 26
    if r == '+' :
     ^
IndentationError: expected an indented block
